logs/hw9_1/build.make.008.log.stderr
/home/ros-industrial/HW9/src/hw9_1/tf_publisher.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW9/src/hw9_1/tf_publisher.cpp:58:42: error: ‘base_link_to_lin’ was not declared in this scope
     printTransform("base_link_to_link2", base_link_to_lin/*k2);
                                          ^
make[2]: *** [CMakeFiles/tf_publisher.dir/tf_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/tf_publisher.dir/all] Error 2
make: *** [all] Error 2
